apps/client/src/features/editor/styles/task-list.css
ul[data-type="taskList"] {
    list-style: none;
    padding: 0;

    p {
        margin: 0;
    }

    li {
        display: flex;

        > label {
            padding-top: 0.2rem;
            flex: 0 0 auto;
            margin-right: 0.5rem;
            user-select: none;
        }

        > div {
            flex: 1 1 auto;
        }

        ul li,
        ol li {
            display: list-item;
        }

        ul[data-type="taskList"] > li {
            display: flex;
        }
    }
}

ul[data-type="taskList"] li > label input[type="checkbox"] {
    width: 1em;
    height: 1em;
    cursor: pointer;
}

